--- a/demo/tsp_search.ipynb
+++ b/demo/tsp_search.ipynb
@@ -24,7 +24,20 @@
    "metadata": {
     "id": "dbe3c5ed"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "d:\\ytn30\\myRL\\myenv\\lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n",
+      "Gym has been unmaintained since 2022 and does not support NumPy 2.0 amongst other critical functionality.\n",
+      "Please upgrade to Gymnasium, the maintained drop-in replacement of Gym, or contact the authors of your software and request that they upgrade.\n",
+      "Users of this version of Gym should be able to simply replace 'import gym' with 'import gymnasium as gym' in the vast majority of cases.\n",
+      "See the migration guide at https://gymnasium.farama.org/introduction/migration_guide/ for additional information.\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import torch\n",
@@ -73,7 +86,7 @@
    "source": [
     "device = 'cuda'\n",
     "#ckpt_path = '../runs/tsp-v0__ppo_or__1__1678160003/ckpt/12000.pt'\n",
-    "ckpt_path = '../runs/container-v0__ppo_or__2025-08-03_23_36/ckpt/465.pt'\n",
+    "ckpt_path = '../runs/container-v0__ppo_or__2025-08-04_22_20/ckpt/279.pt'\n",
     "agent = Agent(device=device, name='container').to(device)\n",
     "agent.load_state_dict(torch.load(ckpt_path))"
    ]
@@ -111,7 +124,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/root/miniconda3/lib/python3.10/site-packages/gym/utils/passive_env_checker.py:31: UserWarning: \u001b[33mWARN: A Box observation space has an unconventional shape (neither an image, nor a 1D vector). We recommend flattening the observation to have only a 1D vector or use a custom policy to properly process the data. Actual observation shape: (20, 6)\u001b[0m\n",
+      "d:\\ytn30\\myRL\\myenv\\lib\\site-packages\\gym\\utils\\passive_env_checker.py:31: UserWarning: \u001b[33mWARN: A Box observation space has an unconventional shape (neither an image, nor a 1D vector). We recommend flattening the observation to have only a 1D vector or use a custom policy to properly process the data. Actual observation shape: (20, 9)\u001b[0m\n",
       "  logger.warn(\n"
      ]
     }
@@ -154,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "bbee9e3c",
    "metadata": {
     "colab": {
@@ -163,7 +176,32 @@
     "id": "bbee9e3c",
     "outputId": "11750d60-eb7c-4d9c-8b40-3a8a92021ffe"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "d:\\ytn30\\myRL\\myenv\\lib\\site-packages\\gym\\utils\\passive_env_checker.py:174: UserWarning: \u001b[33mWARN: Future gym versions will require that `Env.reset` can be passed a `seed` instead of using `Env.seed` for resetting the environment random number generator.\u001b[0m\n",
+      "  logger.warn(\n",
+      "d:\\ytn30\\myRL\\myenv\\lib\\site-packages\\gym\\utils\\passive_env_checker.py:187: UserWarning: \u001b[33mWARN: Future gym versions will require that `Env.reset` can be passed `options` to allow the environment initialisation to be passed additional information.\u001b[0m\n",
+      "  logger.warn(\n",
+      "d:\\ytn30\\myRL\\myenv\\lib\\site-packages\\gym\\utils\\passive_env_checker.py:195: UserWarning: \u001b[33mWARN: The result returned by `env.reset()` was not a tuple of the form `(obs, info)`, where `obs` is a observation and `info` is a dictionary containing additional information. Actual type: `<class 'dict'>`\u001b[0m\n",
+      "  logger.warn(\n",
+      "d:\\ytn30\\myRL\\myenv\\lib\\site-packages\\gym\\utils\\passive_env_checker.py:219: DeprecationWarning: \u001b[33mWARN: Core environment is written in old step API which returns one bool instead of two. It is recommended to rewrite the environment with new step API. \u001b[0m\n",
+      "  logger.deprecation(\n",
+      "d:\\ytn30\\myRL\\myenv\\lib\\site-packages\\gym\\utils\\passive_env_checker.py:225: DeprecationWarning: `np.bool8` is a deprecated alias for `np.bool_`.  (Deprecated NumPy 1.24)\n",
+      "  if not isinstance(done, (bool, np.bool8)):\n",
+      "d:\\ytn30\\myRL\\myenv\\lib\\site-packages\\gym\\utils\\passive_env_checker.py:226: UserWarning: \u001b[33mWARN: Expects `done` signal to be a boolean, actual type: <class 'numpy.ndarray'>\u001b[0m\n",
+      "  logger.warn(\n",
+      "d:\\ytn30\\myRL\\myenv\\lib\\site-packages\\gym\\utils\\passive_env_checker.py:141: UserWarning: \u001b[33mWARN: The obs returned by the `step()` method was expecting numpy array dtype to be float32, actual type: float64\u001b[0m\n",
+      "  logger.warn(\n",
+      "d:\\ytn30\\myRL\\myenv\\lib\\site-packages\\gym\\utils\\passive_env_checker.py:165: UserWarning: \u001b[33mWARN: The obs returned by the `step()` method is not within the observation space.\u001b[0m\n",
+      "  logger.warn(f\"{pre} is not within the observation space.\")\n",
+      "d:\\ytn30\\myRL\\myenv\\lib\\site-packages\\gym\\utils\\passive_env_checker.py:252: UserWarning: \u001b[33mWARN: The reward returned by `step()` must be a float, int, np.integer or np.floating, actual type: <class 'numpy.ndarray'>\u001b[0m\n",
+      "  logger.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "num_steps = 21\n",
     "trajectories = []\n",
@@ -179,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "f0fbf6fd",
    "metadata": {
     "id": "f0fbf6fd"
@@ -203,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "id": "dff29ef4",
    "metadata": {
     "colab": {
@@ -217,29 +255,49 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "A route of length [-17.183088]\n",
+      "A route of length [17.540941]\n",
       "The route is:\n",
-      " [ 0  3  2  4 16 18 19  5  6 11  8 14  9 10  7 13  1 17 12 15  0]\n",
-      "[[1.         0.7777778  1.         0.         1.         0.5       ]\n",
-      " [1.         0.7777778  0.75       0.         1.         0.625     ]\n",
-      " [1.         0.7777778  0.5        0.         1.         0.75      ]\n",
-      " [1.         0.7777778  0.25       0.         1.         0.875     ]\n",
-      " [1.         0.7777778  0.         0.         1.         1.        ]\n",
-      " [0.         0.33333334 1.         0.         0.5        0.125     ]\n",
-      " [0.         0.33333334 0.75       0.         0.25       0.125     ]\n",
-      " [0.         0.7777778  0.25       0.         0.5        0.25      ]\n",
-      " [0.         0.7777778  0.         0.         0.25       0.25      ]\n",
-      " [0.         0.6666667  0.25       0.         0.5        0.375     ]\n",
-      " [0.         0.6666667  0.         0.         0.25       0.375     ]\n",
-      " [0.         0.33333334 0.5        0.         0.5        0.5       ]\n",
-      " [0.         1.         1.         0.         0.25       0.5       ]\n",
-      " [0.         0.5555556  0.25       0.         0.5        0.625     ]\n",
-      " [0.         0.5555556  0.         0.         0.25       0.625     ]\n",
-      " [0.         0.         0.         0.         0.5        0.75      ]\n",
-      " [0.2        0.         0.25       0.         0.25       0.75      ]\n",
-      " [0.2        0.         0.         0.         0.25       0.875     ]\n",
-      " [1.         0.6666667  1.         0.         0.         0.        ]\n",
-      " [1.         0.6666667  0.75       0.         0.         0.125     ]]\n"
+      " [ 8  4  0  1  5 10 16 12 15 17 14  7  9 18 19 13 11  6  3  2  8]\n",
+      "[[-0.27504432  0.4856187   1.6722316  -0.5525671   1.          1.\n",
+      "   1.          1.          1.        ]\n",
+      " [-0.27504432  0.4856187   0.9211445  -0.5369011   1.          1.\n",
+      "   1.          1.          1.        ]\n",
+      " [ 0.8742868  -0.5531262   1.6722316   0.941968    1.          1.\n",
+      "   1.          1.          2.        ]\n",
+      " [ 0.8742868  -0.5531262   0.9211445   0.92906666  1.          1.\n",
+      "   1.          1.          2.        ]\n",
+      " [-0.27504432  0.1393704   1.6722316  -0.47829193  1.          1.\n",
+      "   1.          1.          1.        ]\n",
+      " [-0.27504432  0.1393704   0.9211445  -0.4875072   1.          1.\n",
+      "   1.          1.          1.        ]\n",
+      " [ 0.8742868  -0.89937454  0.9211445   0.9235375   1.          1.\n",
+      "   1.          1.          2.        ]\n",
+      " [ 0.8742868  -0.5531262   0.17005745  0.9235375   1.          1.\n",
+      "   1.          1.          2.        ]\n",
+      " [-0.27504432 -0.20687792  1.6722316  -0.5525671   1.          1.\n",
+      "   1.          1.          1.        ]\n",
+      " [ 0.8742868  -0.5531262  -0.5810296   0.9309097   1.          1.\n",
+      "   1.          1.          2.        ]\n",
+      " [-0.27504432 -0.20687792  0.9211445  -0.5525671   1.          1.\n",
+      "   1.          1.          1.        ]\n",
+      " [ 0.8742868  -0.89937454  0.17005745  0.9235375   1.          1.\n",
+      "   1.          1.          2.        ]\n",
+      " [-0.27504432  0.4856187   0.17005745 -0.5525671   1.          1.\n",
+      "   1.          1.          1.        ]\n",
+      " [ 0.8742868  -0.89937454 -0.5810296   0.94565415  1.          1.\n",
+      "   1.          1.          2.        ]\n",
+      " [-1.1945093   0.83186704  0.9211445   0.9309097   1.          1.\n",
+      "   1.          1.          2.        ]\n",
+      " [-0.27504432  0.4856187  -0.5810296  -0.4875072   1.          1.\n",
+      "   1.          1.          1.        ]\n",
+      " [-0.27504432  0.1393704   0.17005745 -0.5525671   1.          1.\n",
+      "   1.          1.          1.        ]\n",
+      " [-1.1945093   0.83186704  0.17005745  0.73923177  1.          1.\n",
+      "   1.          1.          2.        ]\n",
+      " [ 0.8742868  -0.5531262  -1.3321166   0.9235375   1.          1.\n",
+      "   1.          1.          2.        ]\n",
+      " [ 0.8742868  -0.89937454 -1.3321166   0.9309097   1.          1.\n",
+      "   1.          1.          2.        ]]\n"
      ]
     }
    ],
@@ -262,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "dc681a06",
    "metadata": {
     "cellView": "form",
@@ -271,7 +329,20 @@
      "\"hide-cell\""
     ]
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "too many values to unpack (expected 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[8], line 49\u001b[0m\n\u001b[0;32m     46\u001b[0m     plt\u001b[38;5;241m.\u001b[39maxis(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124msquare\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m     47\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m lc\n\u001b[1;32m---> 49\u001b[0m \u001b[43mplot\u001b[49m\u001b[43m(\u001b[49m\u001b[43mnodes_coordinates\u001b[49m\u001b[43m[\u001b[49m\u001b[43mresulting_traj\u001b[49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[1;32mIn[8], line 44\u001b[0m, in \u001b[0;36mplot\u001b[1;34m(coords)\u001b[0m\n\u001b[0;32m     43\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21mplot\u001b[39m(coords):\n\u001b[1;32m---> 44\u001b[0m     x,y \u001b[38;5;241m=\u001b[39m coords\u001b[38;5;241m.\u001b[39mT\n\u001b[0;32m     45\u001b[0m     lc \u001b[38;5;241m=\u001b[39m colorline(x,y,cmap\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mReds\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m     46\u001b[0m     plt\u001b[38;5;241m.\u001b[39maxis(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124msquare\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
+      "\u001b[1;31mValueError\u001b[0m: too many values to unpack (expected 2)"
+     ]
+    }
+   ],
    "source": [
     "#@title Helper function for plotting\n",
     "# colorline taken from https://nbviewer.org/github/dpsanders/matplotlib-examples/blob/master/colorline.ipynb\n",
@@ -355,7 +426,7 @@
   },
   "gpuClass": "standard",
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "myenv",
    "language": "python",
    "name": "python3"
   },
@@ -369,7 +440,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
