--- a/demo/tsp_search.ipynb
+++ b/demo/tsp_search.ipynb
@@ -86,7 +86,7 @@
    "source": [
     "device = 'cuda'\n",
     "#ckpt_path = '../runs/tsp-v0__ppo_or__1__1678160003/ckpt/12000.pt'\n",
-    "ckpt_path = '../runs/container-v0__ppo_or__2025-08-04_22_20/ckpt/279.pt'\n",
+    "ckpt_path = '../runs/container-v0__ppo_or__2025-08-04_22_00/ckpt/279.pt'\n",
     "agent = Agent(device=device, name='container').to(device)\n",
     "agent.load_state_dict(torch.load(ckpt_path))"
    ]
@@ -124,7 +124,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "d:\\ytn30\\myRL\\myenv\\lib\\site-packages\\gym\\utils\\passive_env_checker.py:31: UserWarning: \u001b[33mWARN: A Box observation space has an unconventional shape (neither an image, nor a 1D vector). We recommend flattening the observation to have only a 1D vector or use a custom policy to properly process the data. Actual observation shape: (20, 9)\u001b[0m\n",
+      "d:\\ytn30\\myRL\\myenv\\lib\\site-packages\\gym\\utils\\passive_env_checker.py:31: UserWarning: \u001b[33mWARN: A Box observation space has an unconventional shape (neither an image, nor a 1D vector). We recommend flattening the observation to have only a 1D vector or use a custom policy to properly process the data. Actual observation shape: (20, 12)\u001b[0m\n",
       "  logger.warn(\n"
      ]
     }
@@ -186,7 +186,20 @@
       "d:\\ytn30\\myRL\\myenv\\lib\\site-packages\\gym\\utils\\passive_env_checker.py:187: UserWarning: \u001b[33mWARN: Future gym versions will require that `Env.reset` can be passed `options` to allow the environment initialisation to be passed additional information.\u001b[0m\n",
       "  logger.warn(\n",
       "d:\\ytn30\\myRL\\myenv\\lib\\site-packages\\gym\\utils\\passive_env_checker.py:195: UserWarning: \u001b[33mWARN: The result returned by `env.reset()` was not a tuple of the form `(obs, info)`, where `obs` is a observation and `info` is a dictionary containing additional information. Actual type: `<class 'dict'>`\u001b[0m\n",
-      "  logger.warn(\n",
+      "  logger.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--- Loading model from file (will happen only ONCE) ---\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
       "d:\\ytn30\\myRL\\myenv\\lib\\site-packages\\gym\\utils\\passive_env_checker.py:219: DeprecationWarning: \u001b[33mWARN: Core environment is written in old step API which returns one bool instead of two. It is recommended to rewrite the environment with new step API. \u001b[0m\n",
       "  logger.deprecation(\n",
       "d:\\ytn30\\myRL\\myenv\\lib\\site-packages\\gym\\utils\\passive_env_checker.py:225: DeprecationWarning: `np.bool8` is a deprecated alias for `np.bool_`.  (Deprecated NumPy 1.24)\n",
@@ -255,49 +268,49 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "A route of length [17.540941]\n",
+      "A route of length [0.]\n",
       "The route is:\n",
-      " [ 8  4  0  1  5 10 16 12 15 17 14  7  9 18 19 13 11  6  3  2  8]\n",
-      "[[-0.27504432  0.4856187   1.6722316  -0.5525671   1.          1.\n",
-      "   1.          1.          1.        ]\n",
-      " [-0.27504432  0.4856187   0.9211445  -0.5369011   1.          1.\n",
-      "   1.          1.          1.        ]\n",
-      " [ 0.8742868  -0.5531262   1.6722316   0.941968    1.          1.\n",
-      "   1.          1.          2.        ]\n",
-      " [ 0.8742868  -0.5531262   0.9211445   0.92906666  1.          1.\n",
-      "   1.          1.          2.        ]\n",
-      " [-0.27504432  0.1393704   1.6722316  -0.47829193  1.          1.\n",
-      "   1.          1.          1.        ]\n",
-      " [-0.27504432  0.1393704   0.9211445  -0.4875072   1.          1.\n",
-      "   1.          1.          1.        ]\n",
-      " [ 0.8742868  -0.89937454  0.9211445   0.9235375   1.          1.\n",
-      "   1.          1.          2.        ]\n",
-      " [ 0.8742868  -0.5531262   0.17005745  0.9235375   1.          1.\n",
-      "   1.          1.          2.        ]\n",
-      " [-0.27504432 -0.20687792  1.6722316  -0.5525671   1.          1.\n",
-      "   1.          1.          1.        ]\n",
-      " [ 0.8742868  -0.5531262  -0.5810296   0.9309097   1.          1.\n",
-      "   1.          1.          2.        ]\n",
-      " [-0.27504432 -0.20687792  0.9211445  -0.5525671   1.          1.\n",
-      "   1.          1.          1.        ]\n",
-      " [ 0.8742868  -0.89937454  0.17005745  0.9235375   1.          1.\n",
-      "   1.          1.          2.        ]\n",
-      " [-0.27504432  0.4856187   0.17005745 -0.5525671   1.          1.\n",
-      "   1.          1.          1.        ]\n",
-      " [ 0.8742868  -0.89937454 -0.5810296   0.94565415  1.          1.\n",
-      "   1.          1.          2.        ]\n",
-      " [-1.1945093   0.83186704  0.9211445   0.9309097   1.          1.\n",
-      "   1.          1.          2.        ]\n",
-      " [-0.27504432  0.4856187  -0.5810296  -0.4875072   1.          1.\n",
-      "   1.          1.          1.        ]\n",
-      " [-0.27504432  0.1393704   0.17005745 -0.5525671   1.          1.\n",
-      "   1.          1.          1.        ]\n",
-      " [-1.1945093   0.83186704  0.17005745  0.73923177  1.          1.\n",
-      "   1.          1.          2.        ]\n",
-      " [ 0.8742868  -0.5531262  -1.3321166   0.9235375   1.          1.\n",
-      "   1.          1.          2.        ]\n",
-      " [ 0.8742868  -0.89937454 -1.3321166   0.9309097   1.          1.\n",
-      "   1.          1.          2.        ]]\n"
+      " [14 17 18 19 13  9 16 15  8 12  2  6  1  5  0 10  3  4 11  7 14]\n",
+      "[[ 0.62047094  0.73079014 -1.312335    1.1807948   0.36077943 -1.3548638\n",
+      "  -0.8282464   1.          1.          1.          1.          1.        ]\n",
+      " [ 0.6351662   0.73079014 -1.312335    0.4227537   1.3353524  -1.3548638\n",
+      "  -0.8282464   1.          1.          1.          1.          1.        ]\n",
+      " [ 0.62047094  0.73079014  0.72810614 -1.0933286   0.36077943 -0.58976424\n",
+      "  -0.8282464   1.          1.          1.          1.          1.        ]\n",
+      " [ 0.62047094  1.2049147   1.0681797   1.1807948   0.36077943 -0.972314\n",
+      "  -0.8282464   1.          1.          1.          1.          2.        ]\n",
+      " [ 0.62047094  1.2049147   1.0681797   0.4227537   1.3353524  -0.972314\n",
+      "  -0.8282464   1.          1.          1.          1.          2.        ]\n",
+      " [ 0.63639086  0.73079014 -1.312335   -0.33528742  0.36077943 -1.3548638\n",
+      "  -0.7584993   1.          1.          1.          1.          1.        ]\n",
+      " [ 0.62292016  0.73079014 -1.312335   -1.0933286   1.3353524  -1.3548638\n",
+      "  -0.7584993   1.          1.          1.          1.          1.        ]\n",
+      " [ 0.6351662   1.2049147   0.72810614  1.938836    1.3353524  -0.58976424\n",
+      "  -0.8282464   1.          1.          1.          1.          2.        ]\n",
+      " [ 0.62047094  1.2049147   1.0681797  -0.33528742  0.36077943 -1.7374135\n",
+      "  -0.8282464   1.          1.          1.          1.          2.        ]\n",
+      " [ 0.62047094  1.2049147   1.0681797  -1.0933286   1.3353524  -1.7374135\n",
+      "  -0.8282464   1.          1.          1.          1.          2.        ]\n",
+      " [ 0.6351662   1.2049147   0.72810614  1.1807948   0.36077943 -0.58976424\n",
+      "  -0.7584993   1.          1.          1.          1.          2.        ]\n",
+      " [ 0.62047094  1.2049147   0.72810614  0.4227537   1.3353524  -0.58976424\n",
+      "  -0.7584993   1.          1.          1.          1.          2.        ]\n",
+      " [ 0.62047094  1.2049147   0.72810614 -0.33528742  0.36077943 -0.972314\n",
+      "  -0.7584993   1.          1.          1.          1.          2.        ]\n",
+      " [ 0.62047094  1.2049147   0.72810614 -1.0933286   1.3353524  -0.972314\n",
+      "  -0.7584993   1.          1.          1.          1.          2.        ]\n",
+      " [ 0.8423702  -1.0234709   0.38803262  1.1807948   0.8480659  -0.58976424\n",
+      "  -0.6887523   1.          2.          2.          2.          3.        ]\n",
+      " [ 0.62047094  0.73079014  1.4082532  -0.33528742  0.36077943 -1.7374135\n",
+      "  -0.7584993   1.          1.          1.          1.          2.        ]\n",
+      " [ 0.62047094  0.73079014  1.0681797  -0.33528742  1.3353524  -1.7374135\n",
+      "  -0.7584993   1.          1.          1.          1.          2.        ]\n",
+      " [ 0.8423702  -1.0234709   0.38803262  0.4227537   0.8480659  -0.972314\n",
+      "  -0.6887523   1.          2.          2.          2.          3.        ]\n",
+      " [ 0.82522565 -1.0234709   0.38803262 -0.33528742  0.8480659  -1.3548638\n",
+      "  -0.6887523   1.          2.          2.          2.          3.        ]\n",
+      " [ 0.8411456  -1.0234709   0.38803262 -1.0933286   0.8480659  -1.7374135\n",
+      "  -0.6887523   1.          2.          2.          2.          3.        ]]\n"
      ]
     }
    ],
